# soft_task3_projectAccountant

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt  CodeParser.cpp  CodeParser.h  FileAnalyser.cpp  FileAnalyser.h  FilesKeeper.cpp  FilesKeeper.h  InfoKeeper.cpp  InfoKeeper.h  main.cpp  utils.h
tests/: CMakeLists.txt  main.cpp  tests.cpp
